@@ -872,6 +872,29 @@
 #
 ##########################################################################################################
 #
+## IPMI_Management_Subsystem_Health_Transition_Severity
+#
+# IPMI_Management_Subsystem_Health_Transition_Severity_No_Event                                         Nominal
+# IPMI_Management_Subsystem_Health_Transition_Severity_Transition_To_OK                                 Nominal
+# IPMI_Management_Subsystem_Health_Transition_Severity_Transition_To_Non_Critical_From_OK               Warning
+# IPMI_Management_Subsystem_Health_Transition_Severity_Transition_To_Critical_From_Less_Severe          Critical
+# IPMI_Management_Subsystem_Health_Transition_Severity_Transition_To_Non_Recoverable_From_Less_Severe   Critical
+# IPMI_Management_Subsystem_Health_Transition_Severity_Transition_To_Non_Critical_From_More_Severe      Warning
+# IPMI_Management_Subsystem_Health_Transition_Severity_Transition_To_Critical_From_Non_Recoverable      Critical
+# IPMI_Management_Subsystem_Health_Transition_Severity_Transition_To_Non_Recoverable                    Critical
+# IPMI_Management_Subsystem_Health_Transition_Severity_Monitor                                          Warning
+# IPMI_Management_Subsystem_Health_Transition_Severity_Informational                                    Nominal
+#
+##########################################################################################################
+#
+## IPMI_Management_Subsystem_Health_Device_Present
+#
+# IPMI_Management_Subsystem_Health_Device_Present_Device_No_Event                Nominal
+# IPMI_Management_Subsystem_Health_Device_Present_Device_Removed_Device_Absent   Critical
+# IPMI_Management_Subsystem_Health_Device_Present_Device_Inserted_Device_Present Nominal
+#
+##########################################################################################################
+#
 ## IPMI_Battery
 #
 # IPMI_Battery_No_Event                  Nominal
