@@ -880,6 +880,27 @@ static struct ipmi_interpret_sel_config ipmi_interpret_sel_management_subsystem_
   };
 static unsigned int ipmi_interpret_sel_management_subsystem_health_config_len = 6;
 
+static struct ipmi_interpret_sel_config ipmi_interpret_sel_management_subsystem_health_transition_severity_config[] =
+  {
+    { "IPMI_Management_Subsystem_Health_Transition_Severity_Transition_To_OK", IPMI_INTERPRET_STATE_NOMINAL, IPMI_INTERPRET_STATE_NOMINAL},
+    { "IPMI_Management_Subsystem_Health_Transition_Severity_Transition_To_Non_Critical_From_OK", IPMI_INTERPRET_STATE_WARNING, IPMI_INTERPRET_STATE_WARNING},
+    { "IPMI_Management_Subsystem_Health_Transition_Severity_Transition_To_Critical_From_Less_Severe", IPMI_INTERPRET_STATE_CRITICAL, IPMI_INTERPRET_STATE_CRITICAL},
+    { "IPMI_Management_Subsystem_Health_Transition_Severity_Transition_To_Non_Recoverable_From_Less_Severe", IPMI_INTERPRET_STATE_CRITICAL, IPMI_INTERPRET_STATE_CRITICAL},
+    { "IPMI_Management_Subsystem_Health_Transition_Severity_Transition_To_Non_Critical_From_More_Severe", IPMI_INTERPRET_STATE_WARNING, IPMI_INTERPRET_STATE_WARNING},
+    { "IPMI_Management_Subsystem_Health_Transition_Severity_Transition_To_Critical_From_Non_Recoverable", IPMI_INTERPRET_STATE_CRITICAL, IPMI_INTERPRET_STATE_CRITICAL},
+    { "IPMI_Management_Subsystem_Health_Transition_Severity_Transition_To_Non_Recoverable", IPMI_INTERPRET_STATE_CRITICAL, IPMI_INTERPRET_STATE_CRITICAL},
+    { "IPMI_Management_Subsystem_Health_Transition_Severity_Monitor", IPMI_INTERPRET_STATE_WARNING, IPMI_INTERPRET_STATE_WARNING},
+    { "IPMI_Management_Subsystem_Health_Transition_Severity_Informational", IPMI_INTERPRET_STATE_NOMINAL, IPMI_INTERPRET_STATE_NOMINAL},
+  };
+static unsigned int ipmi_interpret_sel_management_subsystem_health_transition_severity_config_len = 9;
+
+static struct ipmi_interpret_sel_config ipmi_interpret_sel_management_subsystem_health_device_present_config[] =
+  {
+    { "IPMI_Management_Subsystem_Health_Device_Present_Device_Removed_Device_Absent", IPMI_INTERPRET_STATE_CRITICAL, IPMI_INTERPRET_STATE_CRITICAL},
+    { "IPMI_Management_Subsystem_Health_Device_Present_Device_Inserted_Device_Present", IPMI_INTERPRET_STATE_NOMINAL, IPMI_INTERPRET_STATE_NOMINAL},
+  };
+static unsigned int ipmi_interpret_sel_management_subsystem_health_device_present_config_len = 2;
+
 static struct ipmi_interpret_sel_config ipmi_interpret_sel_battery_config[] =
   {
     { "IPMI_Battery_Battery_Low", IPMI_INTERPRET_STATE_WARNING, IPMI_INTERPRET_STATE_WARNING},
@@ -2141,6 +2162,18 @@ interpret_sel_init (ipmi_interpret_ctx_t ctx)
     goto cleanup;
 
   if (_interpret_config_sel_init (ctx,
+                                  &ctx->interpret_sel.ipmi_interpret_sel_management_subsystem_health_transition_severity_config,
+                                  ipmi_interpret_sel_management_subsystem_health_transition_severity_config,
+                                  ipmi_interpret_sel_management_subsystem_health_transition_severity_config_len) < 0)
+    goto cleanup;
+
+  if (_interpret_config_sel_init (ctx,
+                                  &ctx->interpret_sel.ipmi_interpret_sel_management_subsystem_health_device_present_config,
+                                  ipmi_interpret_sel_management_subsystem_health_device_present_config,
+                                  ipmi_interpret_sel_management_subsystem_health_device_present_config_len) < 0)
+    goto cleanup;
+
+  if (_interpret_config_sel_init (ctx,
                                   &ctx->interpret_sel.ipmi_interpret_sel_battery_config,
                                   ipmi_interpret_sel_battery_config,
                                   ipmi_interpret_sel_battery_config_len) < 0)
@@ -2437,6 +2470,12 @@ interpret_sel_destroy (ipmi_interpret_ctx_t ctx)
 
   _interpret_config_sel_destroy (ctx,
                                  ctx->interpret_sel.ipmi_interpret_sel_management_subsystem_health_config);
+
+  _interpret_config_sel_destroy (ctx,
+                                 ctx->interpret_sel.ipmi_interpret_sel_management_subsystem_health_transition_severity_config);
+
+  _interpret_config_sel_destroy (ctx,
+                                 ctx->interpret_sel.ipmi_interpret_sel_management_subsystem_health_device_present_config);
 
   _interpret_config_sel_destroy (ctx,
                                  ctx->interpret_sel.ipmi_interpret_sel_battery_config);
@@ -3017,6 +3056,8 @@ interpret_sel_config_parse (ipmi_interpret_ctx_t ctx,
   int ipmi_interpret_sel_entity_presence_device_present_flags[ipmi_interpret_sel_entity_presence_device_present_config_len];
   int ipmi_interpret_sel_lan_flags[ipmi_interpret_sel_lan_config_len];
   int ipmi_interpret_sel_management_subsystem_health_flags[ipmi_interpret_sel_management_subsystem_health_config_len];
+  int ipmi_interpret_sel_management_subsystem_health_transition_severity_flags[ipmi_interpret_sel_management_subsystem_health_transition_severity_config_len];
+  int ipmi_interpret_sel_management_subsystem_health_device_present_flags[ipmi_interpret_sel_management_subsystem_health_device_present_config_len];
   int ipmi_interpret_sel_battery_flags[ipmi_interpret_sel_battery_config_len];
   int ipmi_interpret_sel_session_audit_flags[ipmi_interpret_sel_session_audit_config_len];
   int ipmi_interpret_sel_version_change_flags[ipmi_interpret_sel_version_change_config_len];
@@ -3481,6 +3522,18 @@ interpret_sel_config_parse (ipmi_interpret_ctx_t ctx,
                             ctx->interpret_sel.ipmi_interpret_sel_management_subsystem_health_config,
                             ipmi_interpret_sel_management_subsystem_health_flags,
                             ipmi_interpret_sel_management_subsystem_health_config_len);
+
+  _fill_sel_config_options (config_file_options,
+                            &config_file_options_len,
+                            ctx->interpret_sel.ipmi_interpret_sel_management_subsystem_health_transition_severity_config,
+                            ipmi_interpret_sel_management_subsystem_health_transition_severity_flags,
+                            ipmi_interpret_sel_management_subsystem_health_transition_severity_config_len);
+
+  _fill_sel_config_options (config_file_options,
+                            &config_file_options_len,
+                            ctx->interpret_sel.ipmi_interpret_sel_management_subsystem_health_device_present_config,
+                            ipmi_interpret_sel_management_subsystem_health_device_present_flags,
+                            ipmi_interpret_sel_management_subsystem_health_device_present_config_len);
 
   _fill_sel_config_options (config_file_options,
                             &config_file_options_len,
